IGBF-3626: Refactored code to use apache httpclient to make a HTTP call instead of Resources library.